templates/6-enterprise-gke/kcc/workload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-workload
  namespace: default
  labels:
    app.kubernetes.io/name: enterprise-workload
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: enterprise-workload
