templates/6-enterprise-gke/kcc/workload/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enterprise-workload
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: enterprise-workload
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
